<resources>
    <string name="app_name">Calculator</string>
    <string name="app_tittle">Calculator</string>
    <string name="first_number">1st Number:</string>
    <string name="second_number">2nd Number:</string>
    <string name="calc_result">"Result: "</string>
    <string name="placeholder_number">Enter a number</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_multiply">*</string>
    <string name="symbol_divide">/</string>
    <string name="zero_division">Invalid Operation (Division by zero)</string>
    <string name="editText_isNaN">Invalid Operation (Input must be a number)</string>
</resources>